+ add mediator patern  for controllers